# archibold.io

./: .gitignore  CNAME  LICENSE  Makefile  README.md  archibold.header  base  base-install  based  get  index.html  index.old  index.sh  init-pi  params.json  require  setup  test.sh
archibold-upgrade/: Makefile.am  archibold-upgrade  archibold-upgrade.desktop.in  autogen.sh  configure.ac
archibold-upgrade/autom4te.cache/: output.1  requests  traces.0  traces.1
aur/: README.md  TODO-build-webkit2gtk-glesv2  build-cairo  build-cairo-gles  build-cairo-glesv2  build-cairo-glesv2-bin  build-cairo-glesv3  build-cairo-glesv3-bin  build-cog-wpe-bin  build-cog-wpe-gl  build-webkit2gtk-glesv2  build-webkit2gtk-glesv2-bin  build-webkit2gtk-wpe-bin  build-wpewebkit  build-wpewebkit-bin
benja/: index.html  logo  pip  prepare  utils
css/: markdown.css
deb/: gjs
demo/: jellyfish.js
gjs/: replace
help/: index.html
info/: android  bootfix  chromium  clip  echomd  fakeman  fonts  fsutils  git  gnome  gpu  index.html  node  open  pakku  pamac  python-switcher  server  so  spotify  sudo  virtualbox  yaourt
install/: android  archibold  aur  bootfix  bun-dev  chromium  clip  echomd  fakeman  fonts  fsutils  gdm-login-bg  git  git-alias  gnome  gnome-settings  gpu  index.html  linux-raspberrypi  linux-rpi  login  no-pg-keys  node  nodejs  npm  open  pakku  pamac  pi-config  python-switcher  say  server  so  spotify  steam  sudo  system  telegram  test  vim4  (+9 more)
js/: help.js  tinydown.js  transformer.js
kiosk/: base  c2  dependencies  mir  node  nodejs  pi-gpu  pi3  pi3-boot  (+11 more)
(+132 files in other folders)
