# The actual runnable program is set to the SCRIPTS primitive.
# # Prefix bin_ tells where to copy this
bin_SCRIPTS = archibold-upgrade
# # List of files to be distributed
EXTRA_DIST =  \
  $(bin_SCRIPTS)
#
#     # The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = \
  archibold-upgrade.desktop